enhanced documentation