@@ -1,2 +1,58 @@
 # javajava
-various Java classes to be re-used
+
+Various Java classes to be re-used
+
+
+## References
+
+| Utility | Name w. Project URL | Maven build |
+| :------ | :------------------ | :---------- |
+| Database - Snowflake | [snowflakedb/snowflake-jdbc](https://github.com/snowflakedb/snowflake-jdbc) | https://mvnrepository.com/artifact/net.snowflake/snowflake-jdbc |
+| Database - SQLite | [xerial/sqlite-jdbc](https://github.com/xerial/sqlite-jdbc) | https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc |
+| JSON | [FasterXML/jackson](https://github.com/FasterXML/jackson) | https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind |
+| Logging | [Apache Log4j](https://logging.apache.org/log4j/3.x/) | https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core |
+
+
+### Project Management
+
+* [Apache Maven Project](https://maven.apache.org/)
+
+
+### Java coding
+
+* [Clean Coding in Java](https://www.baeldung.com/java-clean-code)
+* [How to Run a Shell Command in Java](https://www.baeldung.com/run-shell-command-in-java)
+* [Java Configuring Multiple Appenders](https://howtodoinjava.com/log4j2/log4j2-xml-configuration-example/#5-the-log4j2xml-file-location)
+* [Java Best Practices](https://blog.jetbrains.com/idea/2024/02/java-best-practices/)
+* [Java Best Practices from GiHub in28minutes repository](https://github.com/in28minutes/java-best-practices)
+* [Java Best Practices That Every Java Developer Should Know in 2024](https://medium.com/@learnwithakshay/java-best-practices-that-every-java-developer-should-know-in-2024-ea84bc0b0fec)
+* [Java LocalDateTime](https://howtodoinjava.com/java/date-time/java-localdatetime-class/)
+* [java.time.LocalDateTime Class in Java](https://www.geeksforgeeks.org/java-time-localdatetime-class-in-java/)
+* [JDK Releases](https://www.java.com/releases/matrix/)
+* [Secure Coding Guidelines for Java SE](https://www.oracle.com/java/technologies/javase/seccodeguide.html)
+* [Top 10 Java Programming Best Practices](https://www.geeksforgeeks.org/java-best-practices/)
+
+
+### Code Quality
+
+* [Eclipse PMD](https://marketplace.eclipse.org/free-tagging/pmd)
+
+
+### Snowflake with Java
+
+* [Connect to Snowflake with JDBC](https://www.snowflake.com/en/blog/ability-to-connect-to-snowflake-with-jdbc/)
+* [Guide to the JDBC ResultSet Interface](https://www.baeldung.com/jdbc-resultset)
+* [Snowflake - Account Usage](https://docs.snowflake.com/en/sql-reference/account-usage)
+* [Snowflake - Information Schema](https://docs.snowflake.com/en/sql-reference/info-schema)
+* [Snowflake - JDBC Driver connection parameter reference](https://docs.snowflake.com/en/developer-guide/jdbc/jdbc-parameters)
+
+
+### Testing in Java
+
+* [Mocking JDBC for Unit Testing](https://www.baeldung.com/mocking-jdbc-unit-testing)
+* [JUnit 5](https://junit.org/junit5/)
+
+
+## Execution Remarks
+
+To avoid a pesky warning at execution time a VM Attribute having the value `--enable-native-access=ALL-UNNAMED` needs to be added
